Tolerate decoders in SimpleAnyCodec and SimpleEitherCodec